force-app/main/default/objects/Template_piece__c/Template_piece__c.object-meta.xml
<CustomObject>
    <description>Contains a piece of text used to instantiate a template.</description>
    <label>Template piece</label>
    <nameField>
        <label>Template piece</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Template pieces</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>