force-app/main/default/objects/Template_piece__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checked if this template piece is active (in use)</description>
    <inlineHelpText>Checked if this template piece is active (in use)</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>