force-app/main/default/objects/Template_piece__c/fields/Custom_Reqs__c.field-meta.xml
<CustomField>
    <fullName>Custom_Reqs__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The custom reqs to which this template piece is assigned</description>
    <inlineHelpText>The custom reqs to which this template piece is assigned</inlineHelpText>
    <label>Custom Reqs</label>
    <referenceTo>Custom_Reqs__c</referenceTo>
    <relationshipLabel>Template pieces</relationshipLabel>
    <relationshipName>Template_pieces</relationshipName>
    <type>Lookup</type>
</CustomField>