force-app/main/default/objects/Template_piece__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <defaultValue>&quot;English&quot;</defaultValue>
    <description>The language of this template piece</description>
    <inlineHelpText>The language of this template piece</inlineHelpText>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Language</valueSetName>
    </valueSet>
</CustomField>