force-app/main/default/objects/Template_piece__c/fields/Piece_text__c.field-meta.xml
<CustomField>
    <fullName>Piece_text__c</fullName>
    <description>The text of this template piece</description>
    <inlineHelpText>The text of this template piece</inlineHelpText>
    <label>Piece text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>