force-app/main/default/objects/Template_piece__c/fields/Revise__c.field-meta.xml
<CustomField>
    <fullName>Revise__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this template piece should be revised before use.</description>
    <inlineHelpText>If checked, this template piece should be revised before use.</inlineHelpText>
    <label>Revise</label>
    <type>Checkbox</type>
</CustomField>