force-app/main/default/objects/Template_piece__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The template parent of this template piece (blank if this is a generic template piece)</description>
    <inlineHelpText>The template parent of this template piece (blank if this is a generic template piece)</inlineHelpText>
    <label>Template</label>
    <referenceTo>Template__c</referenceTo>
    <relationshipLabel>Template pieces</relationshipLabel>
    <relationshipName>Template_pieces</relationshipName>
    <type>Lookup</type>
</CustomField>