force-app/main/default/objects/Template_piece__c/validationRules/NonAdminEditingNonAccountTemplatePiece.validationRule-meta.xml
<ValidationRule>
    <fullName>NonAdminEditingNonAccountTemplatePiece</fullName>
    <active>true</active>
    <description>Only admin users are permitted to edit/create/delete a template piece, unless its template belongs to the Account object.</description>
    <errorConditionFormula>AND( 
 TEXT(Template__r.Type__c) = &quot;Grantmaking&quot;,
 TEXT(Template__r.Source_object__c) != &quot;Account&quot;, 
 !CONTAINS(LOWER($Profile.Name), &quot;admin&quot;) 
)</errorConditionFormula>
    <errorMessage>Only admin users are permitted to edit/create/delete a template piece, unless its template belongs to the Account object.</errorMessage>
</ValidationRule>