force-app/main/default/objects/Template_piece__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Template__c</columns>
    <columns>Active__c</columns>
    <columns>Revise__c</columns>
    <columns>Custom_Reqs__c</columns>
    <columns>Language__c</columns>
    <columns>Piece_text__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>