force-app/main/default/objects/Template_piece__c/listViews/Generic.listView-meta.xml
<ListView>
    <fullName>Generic</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Revise__c</columns>
    <columns>Language__c</columns>
    <columns>Piece_text__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Template__c</field>
        <operation>equals</operation>
    </filters>
    <label>Generic</label>
</ListView>